<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>helios_as2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="parthraj1001@gmail.com">redpaladin</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>image_geometry</depend>
  <depend>message_filters</depend>
  <depend>cv_bridge</depend>
  <depend>vision_msgs</depend>
  <depend>geographic_msgs</depend>
  <depend>as2_python_api</depend>
  <depend>as2_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>helios_interfaces</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>  

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
