<?xml version="1.0"?>
<package format="3">
  <name>helios_interfaces</name>
  <version>0.0.1</version>
  <description>Interfaces for Helios</description>
  <maintainer email="parthraj1001@gmail.com">redpaladin</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>geographic_msgs</depend>
  <depend>builtin_interfaces</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
